--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -2,6 +2,7 @@
     flex-grow: 1;
     //   padding: 1rem;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: #F5F5F5;
   }
 .navbar{
