--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,425 +1,5 @@
-<!-- navbar
 
-<nav class="navbar nav-bg-color py-2">
-  <div class="container-fluid">
-    <a class="navbar-brand logo"><span class="logo text-warning"></span> </a>
-    <form class="d-flex" role="search">
-      <button class="btn btn-outline-light me-2" type="submit">
-        ...
-      </button>
-
-      <button class="btn btn-outline-light me-2" type="submit">
-        Save and Close
-      </button>
-
-      <button class="btn btn-light" type="submit">Continue</button>
-    </form>
-  </div>
-</nav>
-
-<h1 style="text-align: center">E-Signature</h1>
-<div class="col">
-  <h3>Choose Document:</h3>
-  <button type="button" (click)="fileInput.click()">Choose File</button>
-  <input type="file" hidden (change)="onFileSelected($event)" #fileInput />
-  <span class="file-name">{{ selectedFile?.name }}</span>
+<div class="body">
+  <app-sidebar></app-sidebar>
+  <app-main-content></app-main-content>
 </div>
-<div class="file-preview-container">
-  <ngx-extended-pdf-viewer
-    *ngIf="isFileDocument"
-    [base64Src]="selectedFileB64"
-    backgroundColor="#ffffff"
-    [height]="'90vh'"
-    [useBrowserLocale]="true"
-    [handTool]="false"
-    [showHandToolButton]="true"
-  ></ngx-extended-pdf-viewer>
-</div> -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Esignatories</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <!-- Sidebar -->
-    <div class="sidebar d-flex flex-column">
-      <div class="d-block text-start">
-        <div class="d-flex text-start mb-3 main-logo">
-          <img src="../assets/logo.png" alt="logo" class="img-logo" />
-        </div>
-        <div class="d-flex sidebar-items-container text-start">
-         <span class="mi--home"></span>
-          <a href="#" class="">Dashboard</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="iconamoon--arrow-down-5-circle-light"></span>
-          <a href="#" class="">Inbox</a>
-        </div>
-
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="iconamoon--arrow-up-5-circle-light"></span>
-          <a href="#" class="">Outbox</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="iconamoon--check-circle-1-light"></span>
-          <a href="#" class="">Completed</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-         <span class="material-symbols--arrow-circle-right-outline"></span>
-          <a href="#" class="">Draft</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-      <span class="iconamoon--sign-plus-circle-bold"></span>
-          <a href="#" class="">Favorites</a>
-        </div>
-
-        <div class="d-flex sidebar-items-container text-center">
-        <span class="iconamoon--sign-times-circle"></span>
-          <a href="#" class="">Expiry Soon</a>
-        </div>
-        <div class="liner"></div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="cuida--document-text-outline"></span>
-          <a href="#" class="">Documents</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="tabler--folder-open"></span>
-          <a href="#" class="">Archive</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="iconamoon--lightning-2"></span>
-          <a href="#" class="">Templates</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="iconamoon--trash-bold"></span>
-          <a href="#" class="">Trash</a>
-        </div>
-         <div class="liner"></div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="ci--user-add"></span>
-          <a href="#" class="">My First Team</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="cuida--users-outline"></span>
-          <a href="#" class="">Create Teams</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="wpf--clipboard"></span>
-          <a href="#" class="">Document Groups</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-               <span class="mi--table"></span>
-          <a href="#" class="">Document Group Template</a>
-        </div>
-         <div class="liner"></div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="tdesign--user-circle"></span>
-          <a href="#" class="">Contacts</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-        <span class="cuida--users-outline"></span>
-          <a href="#" class="">My Teams</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-           <span class="gravity-ui--chart-column"></span>
-          <a href="#" class="">Create Organization</a>
-        </div>
-        <div class="d-flex sidebar-items-container text-center">
-          <span class="octicon--database-16"></span>
-          <a href="#" class="">API</a>
-        </div>
-        <div class="d-flex sidebar-items-container">
-        <span class="ci--window-sidebar"></span>
-          <a href="#" class="">Admin Console</a>
-        </div>
-      </div>
-       
-      <div class="logout">
-        <div class="liner"></div>
-   <span style="color:#F25022;" class="streamline--logout-1"></span>
-        <a href="#" class="" style="color:#F25022;" >Log Out</a>
-      </div>
-    </div>
-
-    <!-- Main Content -->
-    <div class="content">
-      <!-- Navbar -->
-      <nav
-        class="navbar navbar navbar-light  p-2 px-4 justify-content-space-between"
-      >
-        <div class="profile-name-container ms-2">
-          <span class="d-flex greetings">Welcome Back!</span>
-          <span class="d-block profile-name">Hi Jonathan,</span>
-        </div>
-        <div class="d-flex gap-4 second-profile-name-container px-3">
-          <button class="btn btn-success">Upgrade Plan: 2days Left</button>
-          <div class="line">
-            <span class="mdi--bell-outline"></span>
-            <span class="ei--exclamation"></span>
-
-            <span class="tabler--exclamation-circle"></span>
-            <img src="../assets/img-profile.png" class="rounded" alt="" />
-            <i class="fa fa-chevron-down" aria-hidden="true"></i>
-          </div>
-        </div>
-      </nav>
-
-      <div class="container my-4 px-4">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-4">
-          <div class="col">
-            <div class="card shadow-sm" style="background-color: #0265dc">
-              <div class="card-edit ps-3">
-                <div class="first-section p-3">
-                  <span class="ic--sharp-bar-chart"></span>
-                </div>
-                <div class="second-section ms-3">
-                  <span style="color: #f0f0f0" class="card-sm-text">Inbox</span>
-                  <h5 style="color: #ffffff" class="card-bg-text">15230</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm" style="background-color: #ffffff">
-              <div class="card-edit ps-3">
-                <div class="first-section p-3">
-                  <span class="ic--sharp-bar-chart"></span>
-                </div>
-                <div class="second-section ms-3">
-                  <span class="card-sm-text">Outbox</span>
-                  <h5 class="card-bg-text">526</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm" style="background-color: #ffffff">
-              <div class="card-edit ps-3">
-                <div class="first-section p-3">
-                  <span class="ic--sharp-bar-chart"></span>
-                </div>
-                <div class="second-section ms-3">
-                  <span class="card-sm-text">Completed</span>
-                  <h5 class="card-bg-text">2563</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm" style="background-color: #ffffff">
-              <div class="card-edit ps-3">
-                <div class="first-section p-3">
-                  <span class="ic--sharp-bar-chart"></span>
-                </div>
-                <div class="second-section ms-3">
-                  <span class="card-sm-text">Draft</span>
-                  <h5 class="card-bg-text">106</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Big Upload Card -->
-      <div class="row mt-4 px-4">
-        <div class="col-12">
-          <div class="upload-card">
-            <div class="upload-btn">
-            <img src="../assets/icon-upload.png" alt="">
-              <h5 class="upload-text-one">Add documents using drag and drop or the button below</h5>
-              <p class="upload-text-two">Once added, your document will be displayed here</p>
-              <button class="btn-edit btn mt-2">
-                <i
-                  style="font-size: 20px; text-align: center; color: #0265dc"
-                  class="fa fa-plus mb-1"
-                  aria-hidden="true"
-                ></i>
-                Upload Document
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!--     
-      Responsive Table -->
-      <div class="row mt-5 px-4">
-        <div class="col-12">
-          <h5>Recent</h5>
-          <input type="checkbox" />
-          <div class="table-header">
-            <!-- <input type="checkbox"> -->
-           
-              <span class="gap-5  p-6">NAME</span>
-            <span>DATE</span>
-            <span>SIGNERS</span>
-            <span  >SIZE</span>
-            <span > ACTION</span>
-            
-          </div>
-          <div class="table-responsive">
-            <table class="table">
-      
-
-              <tbody
-                style="
-                  border-left: solid rgb(245, 242, 242) 1px;
-                  border-right: solid rgb(245, 242, 242) 1px;
-                  border-top: solid rgb(245, 242, 242) 1px;
-                  border-radius: 15px;
-                "
-                class="p-5"
-              >
-                <tr class="p-4">
-                  <td class="p-4">
-                    <div class="pdf-container">
-                      <img
-                        src="../assets/pdf-image.png"
-                        alt="PDF Thumbnail"
-                        class="me-2"
-                      />
-                      <div class="pdf-name">
-                        <span class="mt-4">LinkedIn Profile.pdf</span>
-                        <p class="edit-para">PDF</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="p-4">Sep 6, 2023 at 2:58pm</td>
-                  <td class="p-4">5</td>
-                  <td class="p-4">10 MB</td>
-                  <td class="p-4"><i class="bi bi-three-dots"></i></td>
-                </tr>
-                <tr>
-                  <td class="p-4">
-                    <div class="pdf-container">
-                      <img
-                        src="../assets/pdf-image.png"
-                        alt="PDF Thumbnail"
-                        class="me-2"
-                      />
-                      <div class="pdf-name">
-                        <span class="mt-4">LinkedIn Profile.pdf</span>
-                        <p class="edit-para">PDF</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="p-4">Sep 6, 2023 at 2:58pm</td>
-                  <td class="p-4">5</td>
-                  <td class="p-4">10 MB</td>
-                  <td class="p-4"><i class="bi bi-three-dots"></i></td>
-                </tr>
-                <tr>
-                  <td class="p-4">
-                    <div class="pdf-container">
-                      <img
-                        src="../assets/pdf-image.png"
-                        alt="PDF Thumbnail"
-                        class="me-2"
-                      />
-                      <div class="pdf-name">
-                        <span class="mt-4">LinkedIn Profile.pdf</span>
-                        <p class="edit-para">PDF</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="p-4">Sep 6, 2023 at 2:58pm</td>
-                  <td class="p-4">5</td>
-                  <td class="p-4">10 MB</td>
-                  <td class="p-4"><i class="bi bi-three-dots"></i></td>
-                </tr>
-                <tr>
-                  <td class="p-4">
-                    <div class="pdf-container">
-                      <img
-                        src="../assets/pdf-image.png"
-                        alt="PDF Thumbnail"
-                        class="me-2"
-                      />
-                      <div class="pdf-name">
-                        <span class="mt-4">LinkedIn Profile.pdf</span>
-                        <p class="edit-para">PDF</p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="p-4">Sep 6, 2023 at 2:58pm</td>
-                  <td class="p-4">5</td>
-                  <td class="p-4">10 MB</td>
-                  <td class="p-4"><i class="bi bi-three-dots"></i></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-
-      <div class="container my-3 px-4">
-        <!-- Two Responsive Cards -->
-        <div class="row row-cols-1 row-cols-lg-2 g-4">
-          <div class="col">
-            <div class="card p-4" style="background-color: #d2e0fd">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img
-                    src="../assets/payment-img.png"
-                    class="img-fluid rounded-start "
-                    alt="Card Image 1"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body ">
-                    <h5 class="card-title card-text-one">Pricing</h5>
-                    <p class="card-text card-text-two">
-                      From easier tracking to reusable templates, there's a plan
-                      for your business. View Plans
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card special-card" style="background-color: #FEE4D1">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img
-                    src="../assets/testing-img.png"
-                    class="img-fluid rounded-start"
-                    alt="Card Image 2"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body ">
-                    <h5 class="card-title card-text card-text-one">Need help getting started?</h5>
-                    <p class="card-text  card-text card-text-two">
-                   From easier tracking to reusable templates, there's a plan for your business. View Plans
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
