--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,98 +1,102 @@
-<div class="sidebar d-flex flex-column">
+<div class="sidebar d-flex flex-column" >
     <div class="d-block text-start">
       <div class="d-flex text-start mb-3 main-logo">
         <img src="../assets/logo.png" alt="logo" class="img-logo" />
       </div>
       <div class="d-flex sidebar-items-container text-start">
         <span class="mi--home"></span>
-        <a href="#" class="">Dashboard</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Dashboard</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--arrow-down-5-circle-light"></span>
-        <a href="#" class="">Inbox</a>
+        <a href="#" class="roboto-thin" [ngStyle]="fontStyle">Inbox</a>
       </div>
 
-      <div class="d-flex sidebar-items-container text-center">
+      <div class="d-flex sidebar-items-container text-center" [ngStyle]="{'font-family': fontFamily}">
         <span class="iconamoon--arrow-up-5-circle-light"></span>
-        <a href="#" class="">Outbox</a>
+        <a href="#" class="source-code-pro-font" [ngStyle]="fontStyle">Outbox</a>
       </div>
-      <div class="d-flex sidebar-items-container text-center">
+      <div class="d-flex sidebar-items-container text-center" >
         <span class="iconamoon--check-circle-1-light"></span>
-        <a href="#" class="">Completed</a>
+        <a href="#" class="" [ngStyle]="{'font-family': fontFamily}">Completed</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="material-symbols--arrow-circle-right-outline"></span>
-        <a href="#" class="">Draft</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Draft</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--sign-plus-circle-bold"></span>
-        <a href="#" class="">Favorites</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Favorites</a>
       </div>
 
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--sign-times-circle"></span>
-        <a href="#" class="">Expiry Soon</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Expiry Soon</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--document-text-outline"></span>
-        <a href="#" class="">Documents</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Documents</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="tabler--folder-open"></span>
-        <a href="#" class="">Archive</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Archive</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--lightning-2"></span>
-        <a href="#" class="">Templates</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Templates</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--trash-bold"></span>
-        <a href="#" class="">Trash</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Trash</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="ci--user-add"></span>
-        <a href="#" class="">My First Team</a>
+        <a href="#" class="" [ngStyle]="fontStyle">My First Team</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--users-outline"></span>
-        <a href="#" class="">Create Teams</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Create Teams</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="wpf--clipboard"></span>
-        <a href="#" class="">Document Groups</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Document Groups</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="mi--table"></span>
-        <a href="#" class="">Document Group Template</a>
+        <a href="#" class="" [ngStyle]="{'font-family': this.fontFamily, 'font-size': '13px'}">Document Group Template</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="tdesign--user-circle"></span>
-        <a href="#" class="">Contacts</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Contacts</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--users-outline"></span>
-        <a href="#" class="">My Teams</a>
+        <a href="#" class="" [ngStyle]="fontStyle">My Teams</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="gravity-ui--chart-column"></span>
-        <a href="#" class="">Create Organization</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Create Organization</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="octicon--database-16"></span>
-        <a href="#" class="">API</a>
+        <a href="#" class="" [ngStyle]="fontStyle">API</a>
       </div>
       <div class="d-flex sidebar-items-container">
         <span class="ci--window-sidebar"></span>
-        <a href="#" class="">Admin Console</a>
+        <a href="#" class="" [ngStyle]="fontStyle">Admin Console</a>
       </div>
+      <!-- <div class="d-flex sidebar-items-container" *ngFor="let i in 4">
+        <span class="ci--window-sidebar"></span>
+        <a href="#" class="">Admin Console</a>
+      </div> -->
     </div>
 
     <div class="logout">
       <div class="liner"></div>
       <span style="color: #f25022" class="streamline--logout-1"></span>
-      <a href="#" class="" style="color: #f25022">Log Out</a>
+      <a href="#" class="" style="color: #f25022" [ngStyle]="fontStyle">Log Out</a>
     </div>
   </div>
