--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -47,7 +47,7 @@
   align-items: center;
   margin-left: 25px;
   color: #f25022;
-  font-style: Poppins;
+  // font-style: Poppins;
 }
 
 .sidebar-items-container {
