--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -4,8 +4,8 @@
       class="navbar navbar navbar-light p-2 px-4 justify-content-space-between"
     >
       <div class="profile-name-container ms-2">
-        <span class="d-flex greetings">Welcome Back!</span>
-        <span class="d-block profile-name">Hi Jonathan,</span>
+        <span class="d-flex greetings" [ngStyle]="fontStyle('500', '15px')">Welcome Back!</span>
+        <span class="d-block profile-name" [ngStyle]="fontStyle('700', '25px')">Hi Jonathan,</span>
       </div>
       <div class="d-flex gap-4 second-profile-name-container px-3">
         <button class="btn btn-success">Upgrade Plan: 2days Left</button>
@@ -108,7 +108,7 @@
       <!-- Two Responsive Cards -->
       <div class="row row-cols-1 row-cols-lg-2 g-4">
         <div class="col">
-          <div class="card p-4" style="background-color: #d2e0fd">
+          <div class="card special-card p-0" style="background-color: #d2e0fd">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -119,8 +119,8 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title card-text-one">Pricing</h5>
-                  <p class="card-text card-text-two">
+                  <h5 class="card-title card-text-one" [ngStyle]="fontStyle('600', '15px')">Pricing</h5>
+                  <p class="card-text card-text-two" [ngStyle]="fontStyle('400', '15px')">
                     From easier tracking to reusable templates, there's a plan
                     for your business. View Plans
                   </p>
@@ -131,7 +131,7 @@
         </div>
 
         <div class="col">
-          <div class="card special-card" style="background-color: #fee4d1">
+          <div class="card special-card p-0" style="background-color: #fee4d1">
             <div class="row g-0">
               <div class="col-md-4">
                 <img
@@ -142,10 +142,10 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title card-text card-text-one">
+                  <h5 class="card-title card-text card-text-one" [ngStyle]="fontStyle('600', '15px')">
                     Need help getting started?
                   </h5>
-                  <p class="card-text card-text card-text-two">
+                  <p class="card-text card-text card-text-two" [ngStyle]="fontStyle('400', '15px')">
                     From easier tracking to reusable templates, there's a plan
                     for your business. View Plans
                   </p>
