--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,3 +1,4 @@
+
 .content {
     flex-grow: 1;
     //   padding: 1rem;
@@ -16,7 +17,7 @@
     justify-content: center; /* Center vertically */
   }
   .profile-name {
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro";
     font-size: 25px;
     font-weight: 700;
   }
