--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,98 +5,94 @@
       </div>
       <div class="d-flex sidebar-items-container text-start">
         <span class="mi--home"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Dashboard</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Dashboard</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--arrow-down-5-circle-light"></span>
-        <a href="#" class="roboto-thin" [ngStyle]="fontStyle">Inbox</a>
+        <a href="#" class="roboto-thin" [ngStyle]="fontStyle('600', fontSize)">Inbox</a>
       </div>
 
-      <div class="d-flex sidebar-items-container text-center" [ngStyle]="{'font-family': fontFamily}">
+      <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--arrow-up-5-circle-light"></span>
-        <a href="#" class="source-code-pro-font" [ngStyle]="fontStyle">Outbox</a>
+        <a href="#" class="source-code-pro-font" [ngStyle]="fontStyle('600', fontSize)">Outbox</a>
       </div>
       <div class="d-flex sidebar-items-container text-center" >
         <span class="iconamoon--check-circle-1-light"></span>
-        <a href="#" class="" [ngStyle]="{'font-family': fontFamily}">Completed</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Completed</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="material-symbols--arrow-circle-right-outline"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Draft</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Draft</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--sign-plus-circle-bold"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Favorites</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Favorites</a>
       </div>
 
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--sign-times-circle"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Expiry Soon</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Expiry Soon</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--document-text-outline"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Documents</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Documents</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="tabler--folder-open"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Archive</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Archive</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--lightning-2"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Templates</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Templates</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="iconamoon--trash-bold"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Trash</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Trash</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="ci--user-add"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">My First Team</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">My First Team</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--users-outline"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Create Teams</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Create Teams</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="wpf--clipboard"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Document Groups</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Document Groups</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="mi--table"></span>
-        <a href="#" class="" [ngStyle]="{'font-family': this.fontFamily, 'font-size': '13px'}">Document Group Template</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', '13px')">Document Group Template</a>
       </div>
       <div class="liner"></div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="tdesign--user-circle"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Contacts</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Contacts</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="cuida--users-outline"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">My Teams</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">My Teams</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="gravity-ui--chart-column"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Create Organization</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Create Organization</a>
       </div>
       <div class="d-flex sidebar-items-container text-center">
         <span class="octicon--database-16"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">API</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">API</a>
       </div>
       <div class="d-flex sidebar-items-container">
         <span class="ci--window-sidebar"></span>
-        <a href="#" class="" [ngStyle]="fontStyle">Admin Console</a>
+        <a href="#" class="" [ngStyle]="fontStyle('600', fontSize)">Admin Console</a>
       </div>
-      <!-- <div class="d-flex sidebar-items-container" *ngFor="let i in 4">
-        <span class="ci--window-sidebar"></span>
-        <a href="#" class="">Admin Console</a>
-      </div> -->
     </div>
 
     <div class="logout">
       <div class="liner"></div>
       <span style="color: #f25022" class="streamline--logout-1"></span>
-      <a href="#" class="" style="color: #f25022" [ngStyle]="fontStyle">Log Out</a>
+      <a href="#" class="" style="color: #f25022" [ngStyle]="fontStyle('600', fontSize)">Log Out</a>
     </div>
   </div>
