--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,3 @@
-
 .sidebar {
   width: 300px;
   height: 100%;
@@ -9,7 +8,6 @@
   padding: 1rem 1rem 0;
   border-right: 0.4px solid rgb(242, 240, 240);
   color: #454745;
-  
 }
 
 .sidebar a {
@@ -26,10 +24,10 @@
 }
 
 .sidebar .sidebar-items-container:hover {
-  background-color: #EDF5FF;
+  background-color: #edf5ff;
   border-radius: 4px;
-  border-left: solid 3px #0265DC;
-  transition: .4s;
+  border-left: solid 3px #0265dc;
+  transition: 0.4s;
 }
 .main-logo {
   color: #0265dc;
@@ -47,13 +45,11 @@
   align-items: center;
   margin-left: 25px;
   color: #f25022;
-  // font-style: Poppins;
 }
 
 .sidebar-items-container {
   text-align: left;
   align-items: center;
-  // font-family: Source Sans Pro;
   font-size: 15px;
   font-weight: 600;
   line-height: 22px;
@@ -63,17 +59,15 @@
   padding: 0 10px;
   margin-left: 5px;
   color: #454745;
-  // width: 200px;
-  // border: 1px solid red;
 }
-span{
+span {
   width: 20px;
   height: 20px;
 }
 
 .mi--home {
   display: inline-block;
- 
+
   --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M11.336 2.253a1 1 0 0 1 1.328 0l9 8a1 1 0 0 1-1.328 1.494L20 11.45V19a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-7.55l-.336.297a1 1 0 0 1-1.328-1.494zM6 9.67V19h3v-5a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v5h3V9.671l-6-5.333zM13 19v-4h-2v4z'/%3E%3C/svg%3E");
   background-color: currentColor;
   -webkit-mask-image: var(--svg);
@@ -398,18 +392,7 @@ span{
   height: 1px;
 }
 
-.spacing {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
 .special-card {
   padding: 13px;
 }
 
-@media screen and (min-width: 768px) {
-  .cont {
-    display: flex;
-    flex-direction: row;
-  }
-}
